fixed pie z-index

--- a/src/Components/Insight/GooglePieChart/style.css
+++ b/src/Components/Insight/GooglePieChart/style.css
@@ -9,7 +9,7 @@ text {
 
 .pie {
   position: relative;
-  z-index: 99;
+  z-index: 10;
 }
 
 .pie .logoInside {
